fix: 本文のletter-spacing

--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,7 @@ nav {
   p {
     margin: 0.8rem 0;
     line-height: 1.9;
+    letter-spacing: 0.05rem;
     
     > img {
       display: block;
